Tidy up context table styles (#102)
* Tidy up context table styles

* Sort parameter group keys in alphabetical order

* Format values of context items

* Fill runs group sub-header labels with group color

* Fix data formating for group header row in context table

* Tune grouping and formatValue function

Co-authored-by: Ruben Karapetyan <karapetyanrouben@gmail.com>

--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
@@ -69,7 +69,6 @@
 }
 
 .ContextBox__table__group-indicator__chart {
-  display: inline-block;
   width: var(--space-sm);
   height: var(--space-sm);
   margin-left: var(--space-xxs);
@@ -105,4 +104,21 @@
     stroke: #333;
     stroke-width: 2;
   }
+}
+
+.ContextBox__table__item-context__wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+  padding: 1px;
+}
+
+.ContextBox__table__item-context__item {
+  margin-right: var(--space-sm);
+}
+
+.ContextBox__table__item-aggregated_label {
+  color: #FFF;
+  text-shadow: none;
 }
