--- a/client/src/ui/components/Table/Table.less
+++ b/client/src/ui/components/Table/Table.less
@@ -88,7 +88,7 @@
   justify-content: space-between;
   font-size: var(--text-sm);
   color: var(--grey);
-  padding: var(--space-sm);
+  padding: 0 var(--space-sm);
   border-bottom: 1px solid var(--grey-lighter);
   border-right: 1px solid var(--grey-lighter);
   text-align: left;
