Update styles of parameters indices in experiment screen (#104)

--- a/client/src/screens/hub/HubExperimentScreen/HubExperimentScreen.less
+++ b/client/src/screens/hub/HubExperimentScreen/HubExperimentScreen.less
@@ -364,15 +364,19 @@
 
     .ExperimentParams__item__idx {
       color: var(--primary-dark);
+      background-color: var(--primary-bg);
+      border-color: var(--primary-lighter);
     }
   }
 
   .ExperimentParams__item:nth-child(2n+1) {
-    background-color: var(--grey-bg);
+    background-color: var(--grey-bg-light);
     color: var(--grey-darker);
 
     .ExperimentParams__item__idx {
-      color: var(--grey);
+      color: var(--grey-dark);
+      background-color: var(--grey-bg);
+      border-color: var(--grey-light-xx);
     }
   }
 }
@@ -393,11 +397,20 @@
   }
 }
 
-.ExperimentParams__item__idx {
+.ExperimentParams__item__idx__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
   user-select: none;
-  text-align: right;
-  font-size: var(--text-md);
+}
+
+.ExperimentParams__item__idx {
+  font-size: var(--text-xs);
   font-family: var(--number-font);
+  padding: var(--space-xxxs) var(--space-xs);
+  border: 1px solid;
+  border-radius: var(--border-radius);
+  line-height: 1;
 }
 
 .ExperimentStat__head {
