--- a/client/src/ui/components/Tooltip/Tooltip.less
+++ b/client/src/ui/components/Tooltip/Tooltip.less
@@ -10,8 +10,9 @@
   background-color: rgba(88, 96, 105, 0.9);
   border-radius: var(--border-radius);
   color: #FFF;
-  white-space: nowrap;
   z-index: 99999;
   font-size: 0.85rem;
   font-weight: normal;
+  max-width: 350px;
+  word-break: break-word;
 }
