[feat] Add group context info to context table (#110)
* Add group context info to context table

* Update CHANGELOG.md

Co-authored-by: Gor Arakelyan <arakelyangor10@gmail.com>

--- a/client/src/ui/components/Table/Table.less
+++ b/client/src/ui/components/Table/Table.less
@@ -120,10 +120,15 @@
     background-color: #FAFAFA;
     border-color: @border-color-dark;
     z-index: 1;
+    transition: background-color 0.2s ease-out;
 
     &.expanded {
       position: sticky;
       top: calc(3 * @cell-height);
+    }
+
+    &.expandable:hover {
+      background-color: #f3f3f3;
     }
   }
 
