--- a/client/src/screens/hub/HubMainScreen/components/Panel/Panel.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/Panel.less
@@ -9,16 +9,14 @@
   box-sizing: border-box;
   /* TODO: overflow: scroll if number of charts > 9 */
   overflow: hidden;
-  border-radius: var(--border-radius) var(--border-radius) 0 0;
-  background-color: var(--grey-lighter);
-  box-shadow: inset 0 0 4px #FFF;
+  border-radius: var(--border-radius);
+  background-color: #FFF;
+  border: 1px solid var(--grey-light-xx);
 }
 
 .Panel__chart-wrapper {
   box-sizing: border-box;
   overflow: hidden;
-  background-color: #FFF;
-  box-shadow: 0 0 0 1px var(--grey-lighter);
 }
 
 .Panel__msg__wrapper {
