--- a/client/src/themes/basic/colors.less
+++ b/client/src/themes/basic/colors.less
@@ -43,7 +43,14 @@
 @grey-dark: #484F56;
 @grey-darker: #24292E;
 
-/* W/B */
+/* Other colors */
+@color-purple: #8E44AD;
+@color-orange: #E67E22;
+@color-magenta: #B33771;
+@color-yellow: #BDC581;
+@color-tangerine: #FD7272;
+@color-green: #16A085;
+@color-blue: #2980B9;
 @white: #FFF;
 @black: #000;
 
@@ -97,6 +104,15 @@
   --grey: @grey;
   --grey-dark: @grey-dark;
   --grey-darker: @grey-darker;
+
+  /* Other colors */
+  --color-purple: @color-purple;
+  --color-orange: @color-orange;
+  --color-magenta: @color-magenta;
+  --color-yellow: @color-yellow;
+  --color-tangerine: @color-tangerine;
+  --color-green: @color-green;
+  --color-blue: @color-blue;
 
   --white: @white;
   --black: @black;
