--- a/client/src/wrappers/hub/ProjectWrapper/ProjectWrapper.less
+++ b/client/src/wrappers/hub/ProjectWrapper/ProjectWrapper.less
@@ -12,7 +12,7 @@
 
 .ProjectWrapper__header {
   background-color: var(--grey-bg-light);
-  border-bottom: 1px solid var(--grey-lighter);
+  /* border-bottom: 1px solid var(--grey-lighter); */
 }
 
 .ProjectWrapper__header__cont {
