Fix parplot lines coloring (#121)

--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
@@ -159,9 +159,9 @@
   left: 0;
   display: flex;
   opacity: 0;
-  transform: translate(-14px, 0px);
-  width: 15px;
-  height: 45px;
+  transform: translate(-10px, 0px);
+  width: 12px;
+  height: @control-item-width;
   align-items: center;
   justify-content: center;
   border-top-right-radius: var(--border-radius);
