Make context table row heights lower (#127)
* Make context table row heights lower

* Update CHANGELOG

--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
@@ -42,6 +42,12 @@
   width: auto;
   height: 100%;
   white-space: nowrap;
+
+  .Table__cell {
+    .Button__content {
+      padding: 0.4em 1em;
+    }
+  }
 }
 
 .ContextBox__table__row {
