[feat] Draw line circles on ParPlot (#125)
* Add circles on parplot

* Apply click handler to parplot circles

* Display circles only on hovered axis

* Detect closest axis for rendering circles

* Select closest circle during hover on parplot

* Highlight closest line in parplot and corresponding table row

* Persist brush selection on parplot

--- a/client/src/screens/hub/HubMainScreen/components/Panel/components/ParallelCoordinatesChart/ParallelCoordinatesChart.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/components/ParallelCoordinatesChart/ParallelCoordinatesChart.less
@@ -124,4 +124,26 @@
       stroke-dasharray: 5 3;
     }
   }
+
+  .ParCoordsCircle {
+    stroke: var(--primary);
+    stroke-width: 1 !important;
+    transition: all 200ms ease;
+    cursor: pointer;
+
+    &.active {
+      stroke: var(--primary-light);
+      stroke-width: 5 !important;
+    }
+
+    &:active {
+      stroke: var(--primary);
+      stroke-width: 2 !important;
+    }
+
+    &.focus {
+      stroke: var(--primary) !important;
+      stroke-width: 3 !important;
+    }
+  }
 }
