--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
@@ -104,6 +104,18 @@
 
 .ControlsSidebar__item__popup__body {
   padding: var(--component-spacing-xs) var(--component-spacing-sm);
+
+  .ControlsSidebar__groupingDropdown {
+    .Dropdown__menu {
+      position: relative !important;
+      box-shadow: none !important;
+      margin-bottom: 0 !important;
+    }
+
+    .Dropdown__menu-list {
+      max-height: 200px !important;
+    }
+  }
 }
 
 .ControlsSidebar__item__popup__body__field {
