[feat] Add ability to select mode for highlighting metric plots (#132)
* Implement metric highlight mode selection

* Keep preferred mode in local storage

--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
@@ -137,6 +137,7 @@
   display: flex;
   align-items: center;
   color: var(--primary);
+  transition: background-color 110ms ease;
 
   &:last-of-type {
     border-bottom: none;
@@ -146,9 +147,9 @@
     background-color: var(--grey-bg);
   }
 
-  &.active {
-    background-color: var(--primary);
-    color: #FFF;
+  &:active, &.active {
+    background-color: var(--primary-lighter);
+    color: var(--primary-dark);
   }
 
   &.text_normalized {
