Apply color, stroke and grid pattern repeating logic (#135)
* Apply color, stroke and grid pattern repeating logic

* Added scroll to Panel section

* Fix chart ID issue

Co-authored-by: Gor Arakelyan <arakelyangor10@gmail.com>

--- a/client/src/screens/hub/HubMainScreen/components/Panel/Panel.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/Panel.less
@@ -3,15 +3,19 @@
 .Panel {
   height: 100%;
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  /* justify-content: space-between; */
   box-sizing: border-box;
-  /* TODO: overflow: scroll if number of charts > 9 */
-  overflow: hidden;
+  overflow: auto;
   border-radius: var(--border-radius);
   background-color: #FFF;
   border: 1px solid var(--grey-light-xx);
+}
+
+.Panel__chart-container {
+  height: auto;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
 }
 
 .Panel__chart-wrapper {
