Add ability to filter table columns (#143)
* Add ability to filter table columns

* Implement fields search

* Focus on search input when opening popup

* Add show all/hide all buttons

* Update dashboard table

--- a/client/src/screens/hub/HubExperimentsDashboardScreen/HubExperimentsDashboardScreen.less
+++ b/client/src/screens/hub/HubExperimentsDashboardScreen/HubExperimentsDashboardScreen.less
@@ -95,3 +95,13 @@
 
 .HubExperimentsDashboardScreen__experiments__item {
 }
+
+.HubExperimentsDashboardScreen__runs__actions {
+  flex-wrap: nowrap;
+  padding: 2px 0;
+
+  .Button__content {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+  }
+}
