--- a/client/src/ui/components/Input/Input.less
+++ b/client/src/ui/components/Input/Input.less
@@ -49,11 +49,13 @@
   }
 
   &.tiny {
+    padding: 0.45em;
     font-size: var(--input-xs);
     border-width: 1px;
   }
 
   &.small {
+    padding: 0.55em;
     font-size: var(--input-sm);
     border-width: 1px;
   }
