--- a/client/src/ui/components/Table/Table.less
+++ b/client/src/ui/components/Table/Table.less
@@ -7,11 +7,8 @@
 .Table__container {
   height: 100%;
   width: 100%;
-  overflow: auto;
   box-sizing: border-box;
-  border-radius: var(--border-radius);
-  border: 1px solid @border-color-dark;
-  background: #fff;
+  background: #FFF;
 }
 
 .Table {
