Optimize explore panel rendering performance (#141)
* Switched from React context api to custom state management system

* Remove unnecessary key prop

* Apply lazy grouping and aggregation for trace list

--- a/client/src/components/hub/ContextTable/ContextTable.less
+++ b/client/src/components/hub/ContextTable/ContextTable.less
@@ -36,7 +36,7 @@
   overflow: auto;
   box-sizing: border-box;
   border-radius: var(--border-radius);
-  border: 1px solid #CCC;
+  border: 1px solid #ccc;
 }
 
 .ContextTableBar {
@@ -76,7 +76,7 @@
   cursor: pointer;
   transition: background-color 110ms ease;
   border-radius: var(--border-radius);
-  letter-spacing: .4px;
+  letter-spacing: 0.4px;
   border: 1px solid transparent;
   box-sizing: border-box;
   user-select: none;
@@ -87,7 +87,8 @@
     color: var(--primary-dark);
   }
 
-  &:active, &.active {
+  &:active,
+  &.active {
     background-color: var(--primary-bg);
     border-color: var(--primary-light);
     color: var(--primary-dark);
@@ -103,7 +104,7 @@
   position: absolute;
   top: @table-bar-height;
   left: 0;
-  background-color: #FFF;
+  background-color: #fff;
   outline: 0;
   width: 300px;
   min-height: 100px;
