--- a/client/src/components/hub/ContextTable/components/BarFilter/BarFilter.less
+++ b/client/src/components/hub/ContextTable/components/BarFilter/BarFilter.less
@@ -138,7 +138,8 @@
 }
 
 .BarFilter__form__wrapper {
-  margin: var(--component-spacing-sm) var(--component-spacing-sm) calc(var(--component-spacing-sm) - 2px);
+  margin: var(--component-spacing-sm) var(--component-spacing-sm)
+    calc(var(--component-spacing-sm) - 2px);
 }
 
 .BarFilter__input {
