--- a/client/src/screens/hub/HubMainScreen/components/SelectForm/components/SelectInput/SelectInput.less
+++ b/client/src/screens/hub/HubMainScreen/components/SelectForm/components/SelectInput/SelectInput.less
@@ -72,7 +72,8 @@
 }
 
 .SelectInput__dropdown__selected__items {
-  padding: var(--component-spacing-xs) var(--component-spacing-xs) 0 var(--component-spacing-xs);
+  padding: var(--component-spacing-xs) var(--component-spacing-xs) 0
+    var(--component-spacing-xs);
 }
 
 .SelectInput__dropdown__selected__item {
