--- a/client/src/ui/components/Table/Table.less
+++ b/client/src/ui/components/Table/Table.less
@@ -7,7 +7,7 @@
   height: 100%;
   width: 100%;
   box-sizing: border-box;
-  background: #FFF;
+  background: #fff;
 
   &.Table__container--short {
     --cell-height: 25px;
@@ -29,6 +29,7 @@
   min-width: 100%;
   min-height: 100%;
   box-sizing: border-box;
+  content-visibility: auto;
 }
 
 .Table__pane {
