--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
@@ -1,11 +1,13 @@
 .ContextBox {
   width: 100%;
   height: 100%;
-  box-sizing: border-box;
   overflow: hidden;
-  background-color: #fff;
   margin-left: auto;
-  border-radius: var(--border-radius);
+  box-sizing: border-box;
+
+  &.spacing {
+    padding-top: 5px;
+  }
 }
 
 .ContextBox__loader__wrapper,
@@ -18,20 +20,16 @@
   border-radius: var(--border-radius);
   overflow: hidden;
   box-sizing: border-box;
-}
-
-.ContextBox__resizing {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  background-color: var(--primary-bg);
-  user-select: none;
+  background-color: #fff;
 }
 
 .ContextBox__content {
   width: 100%;
   height: 100%;
   overflow: auto;
+  background-color: #fff;
+  box-sizing: border-box;
+  border-radius: var(--border-radius);
 
   &.resizing * {
     user-select: none;
