Optimize panel rendering with imperative table updates (#147)
* Optimize panel rendering with imperative table updates

* Add items count data to table config

--- a/client/src/screens/hub/HubMainScreen/HubMainScreen.less
+++ b/client/src/screens/hub/HubMainScreen/HubMainScreen.less
@@ -74,7 +74,7 @@
 }
 
 .HubMainScreen__grid__context__bar {
-  background-color: #FFF;
+  background-color: #fff;
   overflow: hidden;
   margin: 5px 0 0 5px;
   height: 35px;
