--- a/client/src/ui/components/Table/Table.less
+++ b/client/src/ui/components/Table/Table.less
@@ -10,7 +10,7 @@
   background: #fff;
 
   &.Table__container--short {
-    --cell-height: 25px;
+    --cell-height: 24px;
   }
 
   &.Table__container--medium {
@@ -78,6 +78,7 @@
   align-items: center;
   background-color: var(--grey-bg);
   height: var(--cell-height);
+  padding-bottom: 2px;
   box-shadow: inset 0px -1px 0 0 @border-color-dark;
   box-sizing: border-box;
   z-index: 2;
@@ -221,7 +222,7 @@
   justify-content: center;
   box-sizing: border-box;
   width: 25px;
-  height: 22px;
+  height: 21px;
   margin-left: var(--space-xxs);
   background-color: var(--primary-bg);
   border: 1px solid var(--primary-lighter);
